[package]
name = "onion-pir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint-dig = "0.8.1"
num-bigint = "0.4.3"
rand_chacha = "0.3.1"
num-traits = "0.2.15"
ndarray = "0.15.6"
itertools = "0.10.5"
rand_distr = "0.4.3"
sha2 = "0.10.5"